# bazel_typescript_closure_sample

./: BUILD.bazel  GUIDE.md  README.md  WORKSPACE  out.js  package-lock.json  package.json  tscc.spec.json  tsconfig.json  tsconfig_dev.json
externs/: BUILD.bazel  defs.bzl  prop-types.ext.js  react-dom.ext.js  react.ext.js
src/: App.tsx  BUILD.bazel  home.html  index.bzl  index.html  index.ts  index_tpl.html  init.tsx  lib.ts  main.ts  styles.scss
