package(default_visibility = ["//visibility:public"])

####
# //:tsconfig.json
#
# This label is the default value of the ts_library 'tsconfig' attribute. This file must exist (and
# be exported) here or else each ts_library will need to specify something else.
####
exports_files(["tsconfig.json"])
